Prima versione finale

--- a/index.yaml
+++ b/index.yaml
@@ -15,3 +15,8 @@ indexes:
   - name: uuid
   - name: start
     direction: desc
+
+- kind: Tariffa
+  properties:
+  - name: visibilita
+  - name: order
