Finale (sicuramente con BUG). Shit

--- a/index.yaml
+++ b/index.yaml
@@ -16,6 +16,12 @@ indexes:
   - name: start
     direction: desc
 
+- kind: Booking
+  properties:
+  - name: parking
+  - name: start
+    direction: desc
+
 - kind: Tariffa
   properties:
   - name: visibilita
