--- a/app.yaml
+++ b/app.yaml
@@ -25,6 +25,7 @@ handlers:
 # where <wsgi_application> is a WSGI application object.
 - url: .*  # This regex directs all routes to main.app
   script: run.app
+  # rimossa per permettere protocollo http e non solo https
   #secure: always
 
 # Third party libraries that are included in the App Engine SDK must be listed
